--- a/cap4.tex
+++ b/cap4.tex
@@ -5,21 +5,30 @@
 \end{center}
 \end{frame}
 
-
-
 \begin{frame}[fragile]
 \frametitle{Resolución de conexiones} 
-\begin{block}{Resolución de conexiones}
+\begin{block}{En un principio}
 \begin{enumerate}
-\item Generación de un grafo bipartito a partir de las ecuaciones \textit{connects}.
-\item Determinación de componente conexas del grafo generado.
+\item Expandir las ecuaciones \textit{for}.
+\item Generar de un grafo a partir de las ecuaciones \textit{connects}.
+\item Determinar las componentes conexas del grafo generado.
 \item Generación de ecuaciones a partir de las componentes conexas.
 \end{enumerate}
 \end{block}
+
+\pause
+\begin{block}{Proponemos}
+\begin{enumerate}
+\item Grafo bipartito cuyos nodos y aristas están etiquetadas según las ecuaciones. \\Grafo Vectorizado.
+\item Búsqueda en profundida modificada para determinar las componentes conexas.    
+\item Generación de ecuaciones a partir de las componentes conexas.
+\end{enumerate}
+\end{block}
+
 \end{frame}
 
 \begin{frame}{fragile}
-\frametitle{Grafo bipartito}
+\frametitle{Grafo Vectorizado}
 \begin{enumerate}
 \setlength\itemsep{1em}
 \item Agregamos un nodo por cada variable de la ecuación.
@@ -51,14 +60,16 @@ end for;
 \begin{tikzpicture}[>=stealth',shorten >=1pt,auto, node distance = 1.5cm,
                     thick,main node/.style={circle,draw,font=\sffamily\bfseries}]
  
-  \node[main node] (1) {lc\_p1};
+  \node[main node] (4)  {gr\_p};
+  \node[main node] (1) [below of=4] {lc\_p1};
   \node[main node] (2) [below of=1] {lc\_p2};
   \node[main node] (3) [below of=2] {lc\_p3};
-  \node[main node] (4) [below of=3] {gr\_p};
   
-  \node[main node] (5) [right of = 1,xshift=3cm ] {\{\}};
+  
+  \node[main node] (7) [right of = 4, xshift=3cm]  {1:N};
+  \node[main node] (5) [below of=7] {\{\}};
   \node[main node] (6) [below of=5]  {1:N-1};
-  \node[main node] (7) [below of=6]  {1:N};  
+    
     
   \path[every node/.style={font=\sffamily\small}]   
     (1) edge node [left,near start,above] {N} (5)
@@ -75,9 +86,9 @@ end for;
 \frametitle{Determinación de componentes conexas}
 \begin{itemize}
 \setlength\itemsep{1em}
-\item Busqueda en profundida sobre el grafo. 
+\item Búsqueda en profundida sobre el grafo. 
 \item Cada visita a un nodo depende de la metadata del grafo.
-\item Multiples visitas a un mismo nodo. 
+\item Múltiples visitas a un mismo nodo. 
 \item Mantenemos referencia del intervalo de acceso al nodo. 
 \item Visitamos un nodo si hay intersección entre intervalos.
 \item Podamos parte de la arista al visitar un nodo.
@@ -105,14 +116,17 @@ end for;
 
 \begin{tikzpicture}[>=stealth',shorten >=1pt,auto, node distance = 1.5cm,
                     thick,main node/.style={circle,draw,font=\sffamily\bfseries}]  
-  \node[main node,\ntwo] (1) {lc\_p1};
+                    
+  \node[main node, \nstart] (4)  {gr\_p};
+  \node[main node,\ntwo] (1) [below of=4]{lc\_p1};
   \node[main node,\nsixe] (2) [below of=1] {lc\_p2};
   \node[main node] (3) [below of=2] {lc\_p3};
-  \node[main node, \nstart] (4) [below of=3] {gr\_p};
   
-  \node[main node] (5) [right of = 1,xshift=3cm ] {\{\}};
+  
+  \node[main node] (7) [right of = 4,xshift=3cm]  {1:N};
+  \node[main node] (5) [below of=7 ] {\{\}};
   \node[main node] (6) [below of=5]  {1:N-1};
-  \node[main node] (7) [below of=6]  {1:N};  
+    
     
   \path<1-6>[every node/.style={font=\sffamily\small}]  
     (1) edge[\nfive] node [left,near start,above] {N} (5)
@@ -131,11 +145,11 @@ end for;
 \column[t]{8cm}  
 \begin{enumerate}
 \item Arrancamos en \textit{gr\_p}.
-\item<2-> Existe único camino con intervalo 1:N.
+\item<2-> Existe único camino y tiene intervalo 1:N.
 \item<3-> Visitamos \textit{lc\_p1} con intervalo 1:N.
 \item<4-> Podamos el grafo.
-\item<5-> Existe único camino con intervalo N.
-\item<6-> Visitamos \textit{lc\_p2} con intervalo N.
+\item<5-> Existe un camino con índice N.
+\item<6-> Visitamos \textit{lc\_p2} con índice N.
 \item<7-> Podamos el grafo.
 \item<8-> $N \cap 1:N-1 = \{\}$. \\
           No hay más nodos para buscar.
@@ -158,14 +172,17 @@ end for;
 
 \begin{tikzpicture}[>=stealth',shorten >=1pt,auto, node distance = 1.5cm,
                     thick,main node/.style={circle,draw,font=\sffamily\bfseries}]  
-  \node[main node,\none] (1) {lc\_p1};
+  
+  \node[main node,\ntwo] (4)  {gr\_p};
+  \node[main node,\none] (1) [below of=4]{lc\_p1};
   \node[main node,\nstart] (2) [below of=1] {lc\_p2};
   \node[main node] (3) [below of=2] {lc\_p3};
-  \node[main node,\ntwo] (4) [below of=3] {gr\_p};
   
-  \node[main node] (5) [right of = 1,xshift=3cm ] {\{\}};
+  
+  \node[main node] (7) [right of = 4,xshift=3cm]  {1:N};
+  \node[main node] (5) [below of=7] {\{\}};
   \node[main node] (6) [below of=5]  {1:N-1};
-  \node[main node] (7) [below of=6]  {1:N};   
+     
     
    \path[every node/.style={font=\sffamily\small}]    
     (2) edge node[left,very near start,below] {i} (6)  
@@ -178,73 +195,26 @@ end for;
 \setlength\itemsep{2em}
 \item En \textit{lc\_p2} la solución es:    
     \begin{itemize}
-    \item $\langle \textit{lc\_p2} \rangle$ en N. 
+    \item $\langle \ \textit{lc\_p2[N]} \ \rangle$. 
     \end{itemize}
 
 \item<2-> En \textit{lc\_p1} hubo una partición de intervalos:
     \begin{itemize}
-    \item $1:N-1$ \only<3->{$\rightarrow$  $\langle \textit{lc\_p1} \rangle$ en $1:N-1$ }
-    \item $N$     \only<3->{$\rightarrow$  $\langle \textit{lc\_p1},\textit{lc\_p2} \rangle$  en $N$ }
+    \item $1:N-1$ \only<3->{$\rightarrow \  \langle \textit{lc\_p1[i]} \  \rangle$ en $1:N-1$ }
+    \item $N$     \only<3->{$\rightarrow \  \langle \textit{lc\_p1[N]},\ \textit{lc\_p2[N]} \  \rangle$ }
     \end{itemize}
     
 \item<4-> En \textit{gr\_p} las soluciones finales son:
     \begin{itemize}
-    \item $\langle  \textit{gr\_p} , \textit{lc\_p1} \rangle$ en $1:N-1$
-    \item $\langle \textit{gr\_p}, \textit{lc\_p1},\textit{lc\_p2} \rangle$  en $N$ 
+    \item $\langle \  \textit{gr\_p[i]},\ \textit{lc\_p1[i]} \  \rangle$ en $1:N-1$
+    \item $\langle \  \textit{gr\_p[N]},\ \textit{lc\_p1[N]},\ \textit{lc\_p2[N]} \  \rangle$  
     \end{itemize}
     
 \end{enumerate}
 \end{columns}
 \end{frame}
 
-\begin{frame}[fragile]
-\frametitle{Determinación de componentes conexas}
-\begin{columns} 
-\column[t]{7cm}  
 
-  \newcommand*\nstart{} 
-  \newcommand*\none{} 
-  \newcommand*\ntwo{} 
-  \newcommand*\ntres{}
-  \only<1-2>{\renewcommand*\nstart{green}}
-  \only<2->{\renewcommand*\none{blue}}
-  \only<3-5>{\renewcommand*\ntwo{green}} 
-  \only<6->{\renewcommand*\ntres{green}}
-
-\begin{tikzpicture}[>=stealth',shorten >=1pt,auto, node distance = 1.5cm,
-                    thick,main node/.style={circle,draw,font=\sffamily\bfseries}]  
-  \node[main node] (1) {lc\_p1};
-  \node[main node,\ntwo] (2) [below of=1] {lc\_p2};
-  \node[main node,\nstart,\ntres] (3) [below of=2] {lc\_p3};
-  \node[main node] (4) [below of=3] {gr\_p};
-  
-  \node[main node] (5) [right of = 1,xshift=3cm ] {\{\}};
-  \node[main node] (6) [below of=5]  {1:N-1};
-  \node[main node] (7) [below of=6]  {1:N};   
-    
-   \path<1-3>[every node/.style={font=\sffamily\small}]    
-    (2) edge[\none] node[left,very near start,below] {i} (6)  
-    (3) edge[\none] node [left,near start,above] {i + 1} (6); 
-        
-\end{tikzpicture}
-
-\column[t]{8cm}  
-\begin{enumerate}
-\item Arrancamos en \textit{lc\_p3}.
-\item<2-> Existe único camino con intervalo 1:N-1.
-\item<3-> Visitamos \textit{lc\_p2} con intervalo 1:N-1.
-\item<4-> Podamos el grafo.
-\item<5-> En \textit{lc\_p2} la solución es: 
-    \begin{itemize}
-    \item $\langle \textit{lc\_p2[i]} \rangle$ en 1:N-1. 
-    \end{itemize}
-\item<6-> En \textit{lc\_p3} la solución es: 
-    \begin{itemize}
-    \item $\langle \textit{lc\_p2[i]},\textit{lc\_p3[i + 1]} \rangle$ en 1:N-1. 
-    \end{itemize}   
-\end{enumerate}
-\end{columns}
-\end{frame}
 
 \begin{frame}{fragile}
 \frametitle{Generación de ecuaciones}
@@ -253,30 +223,25 @@ end for;
 \item Cada componente conexa determina un conjunto de ecuaciones.
 \item Determinar el tipo de conector usado.
 \item Las variables de potencial deben quedar igualadas entre sí.
-\item Las variables de flujo deben sumar zero. 
+\item Las variables de flujo deben sumar cero. 
 \end{itemize}
 \end{frame}
 
 \begin{frame}[fragile]
 \frametitle{Generación de ecuaciones} 
 \begin{itemize}
-\item $\langle \textit{lc\_p2[i]},\textit{lc\_p3[i + 1]} \rangle$ en 1:N-1.\\
+\item $\langle \ \textit{gr\_p[i]},\ \textit{lc\_p1[i]} \ \rangle$ en $1:N-1$. \\
+\vspace{1em}
 \begin{lstlisting}[style=base]
-    for i in 1:N - 1 loop
-        lc_p2_v[i] = lc_p3_v[i + 1];
-        lc_p2_i[i] + lc_p3_i[i + 1] = 0;
-    end for;
-\end{lstlisting}
-
-\item $\langle  \textit{gr\_p} , \textit{lc\_p1} \rangle$ en $1:N-1$. \\
-\begin{lstlisting}[style=base]
-    for i in 1:N - 1 loop
+    @2for i in 1:N - 1 loop@
         gr_p_v[i] = lc_p1_v[i];
         gr_p_i[i] + lc_p1_i[i] = 0;
-    end for;
+    @2end for;@
 \end{lstlisting}
 
-\item $\langle \textit{gr\_p}, \textit{lc\_p1},\textit{lc\_p2} \rangle$  en $N$. \\
+\pause
+\item $\langle \ \textit{gr\_p[N]},\ \textit{lc\_p1[N]},\ \textit{lc\_p2[N]} \ \rangle$ . \\
+\vspace{1em}
 \begin{lstlisting}[style=base]
     gr_p_v[N] = lc_p1_v[N];  
     gr_p_v[N] = lc_p2_v[N];
